// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders consistently 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 38px;
  position: absolute;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  height: 20px;
  min-width: 38px;
}

.c0 .pc-AvatarItem {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 20px;
  width: 20px;
  box-shadow: 0 0 0 1px #ffffff;
  position: relative;
  overflow: hidden;
  -webkit-transition: margin 0.2s ease-in-out,opacity 0.2s ease-in-out,visibility 0.2s ease-in-out,box-shadow 0.1s ease-in-out;
  transition: margin 0.2s ease-in-out,opacity 0.2s ease-in-out,visibility 0.2s ease-in-out,box-shadow 0.1s ease-in-out;
}

.c0 .pc-AvatarItem:first-child {
  margin-left: 0;
  z-index: 10;
}

.c0 .pc-AvatarItem:nth-child(n + 2) {
  margin-left: -11px;
  z-index: 9;
}

.c0 .pc-AvatarItem:nth-child(n + 3) {
  margin-left: -17px;
  opacity: 55%;
  z-index: 8;
}

.c0 .pc-AvatarItem:nth-child(n + 4) {
  opacity: 40%;
  z-index: 7;
}

.c0 .pc-AvatarItem:nth-child(n + 5) {
  opacity: 25%;
  z-index: 6;
}

.c0 .pc-AvatarItem:nth-child(n + 6) {
  opacity: 0;
  visibility: hidden;
}

.c0.pc-AvatarStack--two {
  min-width: 30px;
}

.c0.pc-AvatarStack--three-plus {
  min-width: 38px;
}

.c0.pc-AvatarStack--right {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c0.pc-AvatarStack--right .pc-AvatarItem {
  margin-left: 0 !important;
}

.c0.pc-AvatarStack--right .pc-AvatarItem:first-child {
  margin-right: 0;
}

.c0.pc-AvatarStack--right .pc-AvatarItem:nth-child(n + 2) {
  margin-right: -11px;
}

.c0.pc-AvatarStack--right .pc-AvatarItem:nth-child(n + 3) {
  margin-right: -17px;
}

.c0.pc-AvatarStack--right .pc-AvatarStackBody {
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0.pc-AvatarStack--right .pc-AvatarStackBody:hover .pc-AvatarItem {
  margin-right: 4px!important;
  margin-left: 0 !important;
}

.c0.pc-AvatarStack--right .pc-AvatarStackBody:hover .pc-AvatarItem:first-child {
  margin-right: 0 !important;
}

.c0 .pc-AvatarStackBody:hover {
  width: auto;
}

.c0 .pc-AvatarStackBody:hover .pc-AvatarItem {
  margin-left: 4px;
  opacity: 100%;
  visibility: visible;
  box-shadow: 0 0 0 4px #ffffff;
}

.c0 .pc-AvatarStackBody:hover .pc-AvatarItem:first-child {
  margin-left: 0;
}

<span
  className="c0 pc-AvatarStack--three-plus"
>
  <div
    className="c1 pc-AvatarStackBody"
    display="flex"
    width="38px"
  >
    <img
      alt=""
      className="pc-AvatarItem"
      src="https://avatars.githubusercontent.com/primer"
    />
    <img
      alt=""
      className="pc-AvatarItem"
      src="https://avatars.githubusercontent.com/github"
    />
    <img
      alt=""
      className="pc-AvatarItem"
      src="https://avatars.githubusercontent.com/primer"
    />
    <img
      alt=""
      className="pc-AvatarItem"
      src="https://avatars.githubusercontent.com/github"
    />
  </div>
</span>
`;

exports[`Avatar respects alignRight props 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 38px;
  position: absolute;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  height: 20px;
  min-width: 38px;
}

.c0 .pc-AvatarItem {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 20px;
  width: 20px;
  box-shadow: 0 0 0 1px #ffffff;
  position: relative;
  overflow: hidden;
  -webkit-transition: margin 0.2s ease-in-out,opacity 0.2s ease-in-out,visibility 0.2s ease-in-out,box-shadow 0.1s ease-in-out;
  transition: margin 0.2s ease-in-out,opacity 0.2s ease-in-out,visibility 0.2s ease-in-out,box-shadow 0.1s ease-in-out;
}

.c0 .pc-AvatarItem:first-child {
  margin-left: 0;
  z-index: 10;
}

.c0 .pc-AvatarItem:nth-child(n + 2) {
  margin-left: -11px;
  z-index: 9;
}

.c0 .pc-AvatarItem:nth-child(n + 3) {
  margin-left: -17px;
  opacity: 55%;
  z-index: 8;
}

.c0 .pc-AvatarItem:nth-child(n + 4) {
  opacity: 40%;
  z-index: 7;
}

.c0 .pc-AvatarItem:nth-child(n + 5) {
  opacity: 25%;
  z-index: 6;
}

.c0 .pc-AvatarItem:nth-child(n + 6) {
  opacity: 0;
  visibility: hidden;
}

.c0.pc-AvatarStack--two {
  min-width: 30px;
}

.c0.pc-AvatarStack--three-plus {
  min-width: 38px;
}

.c0.pc-AvatarStack--right {
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c0.pc-AvatarStack--right .pc-AvatarItem {
  margin-left: 0 !important;
}

.c0.pc-AvatarStack--right .pc-AvatarItem:first-child {
  margin-right: 0;
}

.c0.pc-AvatarStack--right .pc-AvatarItem:nth-child(n + 2) {
  margin-right: -11px;
}

.c0.pc-AvatarStack--right .pc-AvatarItem:nth-child(n + 3) {
  margin-right: -17px;
}

.c0.pc-AvatarStack--right .pc-AvatarStackBody {
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.c0.pc-AvatarStack--right .pc-AvatarStackBody:hover .pc-AvatarItem {
  margin-right: 4px!important;
  margin-left: 0 !important;
}

.c0.pc-AvatarStack--right .pc-AvatarStackBody:hover .pc-AvatarItem:first-child {
  margin-right: 0 !important;
}

.c0 .pc-AvatarStackBody:hover {
  width: auto;
}

.c0 .pc-AvatarStackBody:hover .pc-AvatarItem {
  margin-left: 4px;
  opacity: 100%;
  visibility: visible;
  box-shadow: 0 0 0 4px #ffffff;
}

.c0 .pc-AvatarStackBody:hover .pc-AvatarItem:first-child {
  margin-left: 0;
}

<span
  className="c0 pc-AvatarStack--three-plus pc-AvatarStack--right"
>
  <div
    className="c1 pc-AvatarStackBody"
    display="flex"
    width="38px"
  >
    <img
      alt=""
      className="pc-AvatarItem"
      src="https://avatars.githubusercontent.com/primer"
    />
    <img
      alt=""
      className="pc-AvatarItem"
      src="https://avatars.githubusercontent.com/github"
    />
    <img
      alt=""
      className="pc-AvatarItem"
      src="https://avatars.githubusercontent.com/primer"
    />
    <img
      alt=""
      className="pc-AvatarItem"
      src="https://avatars.githubusercontent.com/github"
    />
  </div>
</span>
`;
